--- a/src/views/editReceipt.ejs
+++ b/src/views/editReceipt.ejs
@@ -27,7 +27,37 @@
                         <div class="col-lg-6">
                             <div class="ibox">
                                 <div class="form-control">
-                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Número</label>
+                                    <% if (collective === undefined) { %>
+                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Número Póliza</label>
+                                            <div class="col-sm-9">
+                                                <select class="form-control" name="numero_poliza_colectivo" required>
+                                                    <option value="<%= policy.numero_poliza %>"><%= policy.numero_poliza %></option>
+                                                    <% policies.forEach((policy) => { %>
+                                                        <option value="<%= policy.numero_poliza %>"><%= policy.numero_poliza %></option>
+                                                    <% }); %>
+                                                    <% collectives.forEach((collective) => { %>
+                                                        <option value="<%= collective.numero_colectivo %>"><%= collective.numero_colectivo %></option>
+                                                    <% }); %>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    <% } else if (policy === undefined) { %>
+                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Número Póliza</label>
+                                            <div class="col-sm-9">
+                                                <select class="form-control" name="numero_poliza_colectivo" required>
+                                                    <option value="<%= collective.numero_colectivo %>"><%= collective.numero_colectivo %></option>
+                                                    <% policies.forEach((policy) => { %>
+                                                        <option value="<%= policy.numero_poliza %>"><%= policy.numero_poliza %></option>
+                                                    <% }); %>
+                                                    <% collectives.forEach((collective) => { %>
+                                                        <option value="<%= collective.numero_colectivo %>"><%= collective.numero_colectivo %></option>
+                                                    <% }); %>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    <% } %>
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Número Recibo</label>
                                         <div class="col-sm-9">
                                             <input 
                                                 type="number"
@@ -37,6 +67,18 @@
                                                 class="form-control"
                                                 required
                                             >
+                                        </div>
+                                    </div>
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Tipo Fecha</label>
+                                        <div class="col-sm-9">
+                                            <select class="form-control" name="tipo_fecha_recibo" id="tipo_fecha_recibo" required onchange="automaticDates()">
+                                                <option value="<%= receipt.tipo_fecha_recibo %>"><%= receipt.tipo_fecha_recibo %></option>
+                                                <option value="MENSUAL">MENSUAL</option>
+                                                <option value="TRIMESTRAL">TRIMESTRAL</option>
+                                                <option value="SEMESTRAL">SEMESTRAL</option>
+                                                <option value="ANUAL">ANUAL</option>
+                                            </select>
                                         </div>
                                     </div>
                                     <div class="hr-line-dashed"></div>
@@ -61,7 +103,7 @@
                                                             type="checkbox" 
                                                             name="fraccionamiento_boolean_recibo" 
                                                             id="fraccionamiento_boolean_recibo"
-                                                            onclick="premiumCalculation()"
+                                                            onclick="premiumCalculationDate()"
                                                             <%= receipt.fraccionamiento_boolean_recibo === 1 ? 'checked': '' %> 
                                                         >  
                                                         ¿Aplica Fraccionamiento?
@@ -72,58 +114,28 @@
                                     <div class="hr-line-dashed"></div>
                                     <div class="form-group row"><label class="col-sm-3 col-form-label">Tipo</label>
                                         <div class="col-sm-9">
-                                            <select class="form-control" name="tipo_fraccionamiento_recibo" id="tipo_fraccionamiento_recibo" onchange="premiumCalculation()">
+                                            <select class="form-control" name="tipo_fraccionamiento_recibo" id="tipo_fraccionamiento_recibo" onchange="premiumCalculationDate()">
                                                 <option value="<%= receipt.tipo_fraccionamiento_recibo %>"><%= receipt.tipo_fraccionamiento_recibo %></option>
                                                 <option value="MENSUAL">MENSUAL</option>
-                                                <option value="BIMENSUAL">BIMENSUAL</option>
                                                 <option value="TRIMESTRAL">TRIMESTRAL</option>
                                                 <option value="SEMESTRAL">SEMESTRAL</option>
+                                                <option value="ANUAL">ANUAL</option>
                                             </select>
                                         </div>
                                     </div>
                                     <div class="hr-line-dashed"></div>
-                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Fecha de Pago</label>
-                                            <div class="col-sm-9">
-                                                <input 
-                                                    type="date"
-                                                    name="fecha_pago_recibo"
-                                                    id="fecha_pago_recibo"
-                                                    value="<%= fechaPagoRecibo %>" 
-                                                    class="form-control"
-                                                    required
-                                                >
-                                            </div>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Fecha de Pago</label>
+                                        <div class="col-sm-9">
+                                            <input 
+                                                type="date"
+                                                name="fecha_pago_recibo"
+                                                id="fecha_pago_recibo"
+                                                value="<%= fechaPagoRecibo %>" 
+                                                class="form-control"
+                                                required
+                                            >
                                         </div>
-                                    <div class="hr-line-dashed"></div>
-                                    <% if (collective === undefined) { %>
-                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Número</label>
-                                            <div class="col-sm-9">
-                                                <select class="form-control" name="numero_poliza_colectivo" required>
-                                                    <option value="<%= policy.numero_poliza %>"><%= policy.numero_poliza %></option>
-                                                    <% policies.forEach((policy) => { %>
-                                                        <option value="<%= policy.numero_poliza %>"><%= policy.numero_poliza %></option>
-                                                    <% }); %>
-                                                    <% collectives.forEach((collective) => { %>
-                                                        <option value="<%= collective.numero_colectivo %>"><%= collective.numero_colectivo %></option>
-                                                    <% }); %>
-                                                </select>
-                                            </div>
-                                        </div>
-                                    <% } else if (policy === undefined) { %>
-                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Número</label>
-                                            <div class="col-sm-9">
-                                                <select class="form-control" name="numero_poliza_colectivo" required>
-                                                    <option value="<%= collective.numero_colectivo %>"><%= collective.numero_colectivo %></option>
-                                                    <% policies.forEach((policy) => { %>
-                                                        <option value="<%= policy.numero_poliza %>"><%= policy.numero_poliza %></option>
-                                                    <% }); %>
-                                                    <% collectives.forEach((collective) => { %>
-                                                        <option value="<%= collective.numero_colectivo %>"><%= collective.numero_colectivo %></option>
-                                                    <% }); %>
-                                                </select>
-                                            </div>
-                                        </div>
-                                    <% } %>
+                                    </div>
                                     <div class="hr-line-dashed"></div>
                                     <% if (naturalInsured === undefined) { %>
                                         <div class="form-group row"><label class="col-sm-3 col-form-label">Cédula/Rif</label>
@@ -135,7 +147,7 @@
                                                     onkeyup="pasarAgentePropio();"
                                                     value="<%= legalInsured.rif_asegurado_per_jur %>" 
                                                     class="form-control"
-                                                    oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
+                                                    oninput="let p=this.selectionStart;this.value=this.value.toUpperCase().replace(/\s+/g, '');this.setSelectionRange(p, p);"
                                                     required
                                                 >
                                             </div>
@@ -150,7 +162,7 @@
                                                     onkeyup="pasarAgentePropio();"
                                                     value="<%= naturalInsured.cedula_asegurado_per_nat %>" 
                                                     class="form-control"
-                                                    oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
+                                                    oninput="let p=this.selectionStart;this.value=this.value.toUpperCase().replace(/\s+/g, '');this.setSelectionRange(p, p);"
                                                     required
                                                 >
                                             </div>
@@ -187,19 +199,6 @@
                                         </div>
                                     </div>
                                     <div class="hr-line-dashed"></div>
-                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Vigencia Hasta</label>
-                                        <div class="col-sm-9">
-                                            <input 
-                                                type="date"
-                                                name="fecha_hasta_recibo"
-                                                id="fecha_hasta_recibo"
-                                                value="<%= fechaHastaRecibo %>"
-                                                class="form-control"
-                                                required
-                                            >
-                                        </div>
-                                    </div>
-                                    <div class="hr-line-dashed"></div>
                                     <div class="form-group row"><label class="col-sm-3 col-form-label">Método de Pago</label>
                                         <div class="col-sm-9">
                                             <select class="form-control" name="metodo_pago_recibo" required>
@@ -217,20 +216,6 @@
                                         </div>
                                     </div>
                                     <div class="hr-line-dashed"></div>
-                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Número de Pagos</label>
-                                        <div class="col-sm-9">
-                                            <input 
-                                                type="number"
-                                                step="0.01" 
-                                                name="numero_pago_recibo"
-                                                id="numero_pago_recibo"
-                                                value="<%= receipt.numero_pago_recibo %>" 
-                                                class="form-control"
-                                                onchange="premiumCalculation()"
-                                            >
-                                        </div>
-                                    </div>
-                                    <div class="hr-line-dashed"></div>
                                     <div class="form-group row"><label class="col-sm-3 col-form-label">Comisión Asociada</label>
                                         <div class="col-sm-9">
                                             <input 
@@ -239,6 +224,19 @@
                                                 id="monto_comision_recibo"
                                                 value="<%= comisionRecibo %>" 
                                                 class="form-control number_format"
+                                                required
+                                            >
+                                        </div>
+                                    </div>
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Vigencia Hasta</label>
+                                        <div class="col-sm-9">
+                                            <input 
+                                                type="date"
+                                                name="fecha_hasta_recibo"
+                                                id="fecha_hasta_recibo"
+                                                value="<%= fechaHastaRecibo %>"
+                                                class="form-control"
                                                 required
                                             >
                                         </div>
@@ -253,6 +251,20 @@
                                                 value="<%= primaRecibo %>" 
                                                 class="form-control number_format"
                                                 required
+                                            >
+                                        </div>
+                                    </div>
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Número de Pagos</label>
+                                        <div class="col-sm-9">
+                                            <input 
+                                                type="number"
+                                                step="0.01" 
+                                                name="numero_pago_recibo"
+                                                id="numero_pago_recibo"
+                                                value="<%= receipt.numero_pago_recibo %>" 
+                                                class="form-control"
+                                                onchange="premiumCalculation()"
                                             >
                                         </div>
                                     </div>
