--- a/src/views/vehiclePolicyForm.ejs
+++ b/src/views/vehiclePolicyForm.ejs
@@ -57,7 +57,7 @@
                                                         onkeyup="pasarNombreTomador();"
                                                         placeholder="Cédula/Rif *" 
                                                         class="form-control"
-                                                        oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
+                                                        oninput="let p=this.selectionStart;this.value=this.value.toUpperCase().replace(/\s+/g, '');this.setSelectionRange(p, p);"
                                                         required
                                                     >
                                                 </div>
@@ -73,7 +73,7 @@
                                                         onkeyup="pasarNombreAsegurado();"
                                                         placeholder="Cédula/Rif *" 
                                                         class="form-control"
-                                                        oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
+                                                        oninput="let p=this.selectionStart;this.value=this.value.toUpperCase().replace(/\s+/g, '');this.setSelectionRange(p, p);"
                                                         required
                                                     >
                                                 </div>
@@ -592,6 +592,19 @@
                                             </div>
                                         </div>
                                         <div class="form-group">
+                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Tipo Fecha</label>
+                                                <div class="col-sm-9">
+                                                    <select class="form-control" name="tipo_fecha_recibo" id="tipo_fecha_recibo" required onchange="automaticDates()">
+                                                        <option value="">Seleccione *</option>
+                                                        <option value="MENSUAL">MENSUAL</option>
+                                                        <option value="TRIMESTRAL">TRIMESTRAL</option>
+                                                        <option value="SEMESTRAL">SEMESTRAL</option>
+                                                        <option value="ANUAL">ANUAL</option>
+                                                    </select>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Vigencia Desde</label>
                                                 <div class="col-sm-9">
                                                     <input 
@@ -609,7 +622,7 @@
                                                 <label class="col-sm-3 col-form-label">Fraccionamiento</label>
                                                 <div class="col-sm-9">
                                                     <div>
-                                                        <label><input type="checkbox" name="fraccionamiento_boolean_recibo" id="fraccionamiento_boolean_recibo" onclick="premiumCalculation()"> 
+                                                        <label><input type="checkbox" name="fraccionamiento_boolean_recibo" id="fraccionamiento_boolean_recibo" onclick="premiumCalculationDate()"> 
                                                                 ¿Aplica Fraccionamiento?
                                                         </label>
                                                     </div>
@@ -618,19 +631,6 @@
                                         </div>
                                         <div id="active-select-1">
                                             <div class="form-group">
-                                                <div class="form-group row"><label class="col-sm-3 col-form-label">Tipo</label>
-                                                    <div class="col-sm-9">
-                                                        <select class="form-control" name="tipo_fraccionamiento_recibo" id="tipo_fraccionamiento_recibo" onchange="premiumCalculation()">
-                                                            <option value="">Seleccione</option>
-                                                            <option value="MENSUAL">MENSUAL</option>
-                                                            <option value="BIMENSUAL">BIMENSUAL</option>
-                                                            <option value="TRIMESTRAL">TRIMESTRAL</option>
-                                                            <option value="SEMESTRAL">SEMESTRAL</option>
-                                                        </select>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="form-group">
                                                 <div class="form-group row"><label class="col-sm-3 col-form-label">Fecha de Pago</label>
                                                     <div class="col-sm-9">
                                                         <input 
@@ -638,7 +638,7 @@
                                                             name="fecha_pago_recibo"
                                                             id="fecha_pago_recibo" 
                                                             class="form-control"
-                                                            required
+                                                            onchange="premiumCalculationDate()"
                                                         >
                                                     </div>
                                                 </div>
@@ -649,7 +649,7 @@
                                                 <div class="form-group row"><label class="col-sm-3 col-form-label">Prima</label>
                                                     <div class="col-sm-9">
                                                         <input 
-                                                            type="text"
+                                                            type="text" 
                                                             name="monto_prima_recibo"
                                                             id="monto_prima_recibo"
                                                             value="<%= policy.prima_anual_poliza %>" 
@@ -664,7 +664,7 @@
                                                 <div class="form-group row"><label class="col-sm-3 col-form-label">Prima</label>
                                                     <div class="col-sm-9">
                                                         <input 
-                                                            type="text"
+                                                            type="text" 
                                                             name="monto_prima_recibo"
                                                             id="monto_prima_recibo"
                                                             placeholder="Monto Prima *" 
@@ -690,6 +690,24 @@
                                             </div>
                                         </div>
                                         <div class="form-group">
+                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Método de Pago</label>
+                                                <div class="col-sm-9">
+                                                    <select class="form-control" name="metodo_pago_recibo" required>
+                                                        <option value="">Seleccione *</option>
+                                                        <option value="TRANSFERENCIA">TRANSFERENCIA</option>
+                                                        <option value="ZELLE">ZELLE</option>
+                                                        <option value="EFECTIVO">EFECTIVO</option>
+                                                        <option value="TARJETA DE DÉBITO">TARJETA DE DÉBITO</option>
+                                                        <option value="TARJETA DE CRÉDITO">TARJETA DE CRÉDITO</option>
+                                                        <option value="PAYPAL">PAYPAL</option>
+                                                        <option value="DEPOSITO BANCARIO">DEPOSITO BANCARIO</option>
+                                                        <option value="FINANCIAMIENTO">FINANCIAMIENTO</option>
+                                                        <option value="OTROS">OTROS</option>
+                                                    </select>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Vigencia Hasta</label>
                                                 <div class="col-sm-9">
                                                     <input 
@@ -702,24 +720,20 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="form-group">
-                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Método de Pago</label>
-                                                <div class="col-sm-9">
-                                                    <select class="form-control" name="metodo_pago_recibo" required>
-                                                        <option value="">Seleccione *</option>
-                                                        <option value="TRANSFERENCIA">TRANSFERENCIA</option>
-                                                        <option value="ZELLE">ZELLE</option>
-                                                        <option value="EFECTIVO">EFECTIVO</option>
-                                                        <option value="TARJETA DE DÉBITO">TARJETA DE DÉBITO</option>
-                                                        <option value="TARJETA DE CRÉDITO">TARJETA DE CRÉDITO</option>
-                                                        <option value="PAYPAL">PAYPAL</option>
-                                                        <option value="DEPOSITO BANCARIO">DEPOSITO BANCARIO</option>
-                                                        <option value="OTROS">OTROS</option>
-                                                    </select>
+                                        <div id="active-select-2">
+                                            <div class="form-group">
+                                                <div class="form-group row"><label class="col-sm-3 col-form-label">Tipo</label>
+                                                    <div class="col-sm-9">
+                                                        <select class="form-control" name="tipo_fraccionamiento_recibo" id="tipo_fraccionamiento_recibo" onchange="premiumCalculationDate()">
+                                                            <option value="">Seleccione</option>
+                                                            <option value="MENSUAL">MENSUAL</option>
+                                                            <option value="TRIMESTRAL">TRIMESTRAL</option>
+                                                            <option value="SEMESTRAL">SEMESTRAL</option>
+                                                            <option value="ANUAL">ANUAL</option>
+                                                        </select>
+                                                    </div>
                                                 </div>
                                             </div>
-                                        </div>
-                                        <div id="active-select-2">
                                             <div class="form-group">
                                                 <div class="form-group row"><label class="col-sm-3 col-form-label">Número de Pagos</label>
                                                     <div class="col-sm-9">
@@ -730,7 +744,7 @@
                                                             id="numero_pago_recibo"
                                                             value="0" 
                                                             class="form-control"
-                                                            onchange="premiumCalculation()"
+                                                            onchange="premiumCalculationDate()"
                                                         >
                                                     </div>
                                                 </div>
@@ -743,7 +757,8 @@
                                                         type="text" 
                                                         name="monto_comision_recibo"
                                                         id="monto_comision_recibo"
-                                                        placeholder="Comisión Asociada *" 
+                                                        placeholder="Comisión Asociada *"
+                                                        value="10" 
                                                         class="form-control number_format"
                                                         required
                                                     >
